--- a/hw1_session2_data_analysis_pandas.ipynb
+++ b/hw1_session2_data_analysis_pandas.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
        "4      0       0       0  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,9 +307,15 @@
    ],
    "source": [
     "df[df['gender'] == 1]['height'].mean(), \\\n",
-    "df[df['gender'] == 2]['height'].mean()\n",
-    "# 1ый вариант\n"
+    "df[df['gender'] == 2]['height'].mean()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
